src/objects/MUSW__Condition__c.object
<CustomObject>
    <description>Breakdown of Conditions of Issuance</description>
    <fields>
        <fullName>MUSW__Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Date_Resolved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Resolved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Full_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Ordinance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MUSW__Violation_Type__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Condition</value>
            </filterItems>
            <infoMessage>Choose type of condition.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MUSW__Violation_Type__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Planning_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Application</label>
        <referenceTo>MUSW__Planning_Application__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Condition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review</label>
        <referenceTo>MUSW__Review__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                    <default>true</default>
                    <label>Outstanding</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FINAL GRADE</fullName>
                </value>
                <value>
                    <fullName>FLOOD HAZARD  AREA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>DRAINAGE EASEMENT</fullName>
                </value>
                <value>
                    <fullName>SOIL EROSION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Condition</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <recordTypes>
        <fullName>MUSW__All</fullName>
        <active>true</active>
        <label>All</label>
    </recordTypes>
    <recordTypes>
        <fullName>MUSW__Comment</fullName>
        <active>true</active>
        <label>Comment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>